--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
             <!-- START: New Key Market Opens Section -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
-                    <h2>Key Market Opens</h2>
+                    <h2>Levels</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
