--- a/index.html
+++ b/index.html
@@ -4581,7 +4581,7 @@ if (content) {
             renderChartLibrary2Folders();
             renderChartLibrary2Preview();
             
-            const sectionsToOpen = ['Key Market Opens', 'Reminders', 'Live Trades', 'Sentiment Log', 'Add New Trade', 'Notes', 'Trading Setups'];
+            const sectionsToOpen = ['Levels', 'Reminders', 'Live Trades', 'Sentiment Log', 'Add New Trade', 'Notes', 'Trading Setups'];
             document.querySelectorAll('.collapsible-header h2').forEach(h2 => {
                 if (sectionsToOpen.includes(h2.textContent.trim())) {
                     const section = h2.closest('.collapsible-section');
