--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                     <div class="collapsible-content-inner">
                         <div id="key-opens-container">
                             <div class="key-open-asset">
-                                <h4>BTC/USDT Opens</h4>
+                                <h4>BTC/USDT</h4>
                                 <div class="key-open-item">
                                     <span class="key-open-label">Daily:</span>
                                     <span id="btc-daily-open" class="key-open-price">--</span>
@@ -1289,7 +1289,7 @@
                                 </div>
                             </div>
                              <div class="key-open-asset">
-                                <h4>ETH/USDT Opens</h4>
+                                <h4>ETH/USDT</h4>
                                 <div class="key-open-item">
                                     <span class="key-open-label">Daily:</span>
                                     <span id="eth-daily-open" class="key-open-price">--</span>
