--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             height:1em;
         }
 
-        /* Asset Sentiment Styles */
+        /* Asset Sentiddddment Styles */
         #asset-sentiment-container h4 {
             text-align: center;
             margin-top: 0;
