--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             --green-border: #c3e6cb;
             --red-border: #f5c6cb;
             --green-text: #155724;
-            --red-text: #721c24;F
+            --red-text: #721c24;
         
         }
 
