--- a/index.html
+++ b/index.html
@@ -2299,7 +2299,7 @@
             const { TIMEFRAMES, PERIODS, SHORT_NAMES } = CONFIG.EMA_ANALYSIS;
             const symbolEmaData = STATE.emaData.data[safeSymbol] || {};
             const currentPrice = symbolEmaData['15min']?.price || 0;
-            const lastUpdatedHtml = STATE.emaData.last_updated ? `<p class="ema-last-updated">Last Updated: <span>${new Date(STATE.emaData.last_updated)..toLocaleString(undefined, { dateStyle: 'medium', timeStyle: 'short' })</span></p>` : '';
+            const lastUpdatedHtml = STATE.emaData.last_updated ? `<p class="ema-last-updated">Last Updated: <span>${new Date(STATE.emaData.last_updated)toLocaleString(undefined, { dateStyle: 'medium', timeStyle: 'short' })</span></p>` : '';
             const priceDisplayHtml = `<div class="ema-table-container"><div class="current-price-display" style="font-size: 14px; margin-bottom: 15px;">Current Price (15m): <span class="price-value">${currentPrice > 0 ? formatCurrency(currentPrice) : '--'}</span></div></div>`;
             let summaryTableHtml = '';
             if (currentPrice > 0) {
